auto code cleanup and auto import optimizing